<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/profile">
        <menu>
            <group
                android:id="@+id/profile"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_histroy"
                    android:icon="@mipmap/fine_history"
                    android:title="@string/fine_history" />

            </group>
        </menu>
    </item>
    <item android:title="@string/account">
        <menu>
            <group
                android:id="@+id/account_settings"
                android:checkableBehavior="single">

                <item android:id="@+id/nav_setting"
                    android:icon="@mipmap/settings"
                    android:title="@string/edit_profile" />

                <item android:id="@+id/nav_logout"
                    android:icon="@mipmap/log_out"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>

</menu>