<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/header_background">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/driver_profile_logo"
        app:srcCompat="@drawable/driver_profile_logo"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="218dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:text="@string/driver_s_name"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="214dp"
        android:layout_height="31dp"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/imageView3"
        android:text="@string/driver_s_id"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>