<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/header_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/officer"
        app:srcCompat="@drawable/police_officer_profile_logo"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="218dp"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:text="@string/officer_s_id"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="214dp"
        android:layout_height="31dp"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/imageView"
        android:text="@string/officer_s_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat" />
</RelativeLayout>