<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverMenu"
    android:id="@+id/drawer_layout">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image_1">


        <Button
            android:id="@+id/Distressbutton"
            android:layout_width="144dp"
            android:layout_height="113dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity=""
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button"
            android:text="@string/distress"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payfine_bttn"
            app:layout_constraintVertical_bias="0.589" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/driver_profile"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/license"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Button
            android:id="@+id/payfine_bttn"
            android:layout_width="157dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/registrationFirstName"
            android:layout_alignRight="@+id/registrationFirstName"
            android:layout_alignTop="@+id/respondaccidentbttn"
            android:layout_marginBottom="188dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/issue_fine_round_button"
            android:text="@string/pay_fine"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.315"
            app:layout_constraintStart_toEndOf="@+id/respondaccidentbttn" />

        <Button
            android:id="@+id/respondaccidentbttn"
            android:layout_width="157dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/issue_fine_round_button"
            android:text="@string/report_accident"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/payfine_bttn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/driverProfileEmail"
            android:layout_width="275dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/driverProfileLicense"
            android:layout_width="275dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/driverProfileName"
            android:layout_width="275dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="56dp"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="Overall Conduct"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/driverMenuConductTextVIew"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/driverMenuConductTextVIew"
            android:layout_width="207dp"
            android:layout_height="39dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="28dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverProfileEmail" />



    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/driver_menu_header"
        android:layout_gravity="start"
        android:theme="@style/NavigationTheme">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>